css/style.css
.header {
  height: 85vh;
  background-image: url(../img/2.jpg);
  background-size: cover;
  background-position: top;
  border-radius: 25px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center; }
  .header .heading {
    font-family: sans-serif;
    color: purple;
    font-size: 4.5rem; }
    .header .heading__sub {
      font-family: sans-serif;
      color: purple;
      font-size: 3.5rem; }

/*
0 - 600px:      Phone
600 - 900px:    Tablet portrait
900 - 1200px:   Tablet landscape
[1200 - 1800] is where our normal styles apply
1800px + :      Big desktop

$breakpoint arguement choices:
- phone
- tab-port
- tab-land
- big-desktop

ORDER: Base + typography > general layout + grid > page layout > components

1em = 16px
*/
.sponsors {
  width: 100vw;
  background-color: black; }
  .sponsors__head {
    text-align: center;
    font-family: cursive;
    font-size: 4rem;
    color: blueviolet; }
  .sponsors__pics {
    width: 2rem;
    margin-top: 2rem;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    justify-items: center;
    grid-column-gap: 3rem;
    align-items: center; }
    .sponsors__pics > * {
      width: 20rem; }

.description {
  margin: 20px; }
  .description h2 {
    font-family: cursive;
    font-size: 4rem;
    color: purple;
    text-align: center; }
  .description__passage {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
    grid-gap: 20px; }
    .description__passage .p1 {
      font-size: 2rem;
      font-family: sans-serif;
      font-weight: 100; }
    .description__passage .p2 {
      font-size: 2rem;
      font-family: sans-serif;
      font-weight: 100; }

.facilities {
  grid-column: center-start / center-end;
  margin: 15rem 0; }
  @supports (display: grid) {
    .facilities {
      display: grid;
      grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
      grid-gap: 6rem;
      align-items: start; } }

.feature {
  float: left;
  width: 33.3333%;
  margin-bottom: 6rem;
  display: grid;
  grid-template-columns: min-content 1fr;
  grid-row-gap: 1.5rem;
  grid-column-gap: 2.5rem; }
  @supports (display: grid) {
    .feature {
      width: auto;
      margin-bottom: 0; } }
  .feature .heading-4 {
    font-size: 2rem; }
  .feature__icon {
    fill: red;
    width: 4.5rem;
    height: 4.5rem;
    grid-row: 1 / span 2;
    transform: translateY(-1rem); }
  .feature__text {
    font-size: 1.7rem; }

.products {
  margin: 15rem 0;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
  grid-gap: 2rem; }
  .products .home {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-row-gap: 3.5rem; }
    .products .home__img {
      width: 100%;
      grid-row: 1 / 3;
      grid-column: 1 / -1;
      z-index: 1; }
    .products .home__name {
      background-color: black;
      color: aliceblue;
      font-size: 2.5rem;
      padding: 1rem;
      grid-row: 1 / 3;
      grid-column: 1 / -1;
      z-index: 5;
      justify-self: center;
      align-self: end;
      transform: translateY(20px);
      border-radius: 20px; }
    .products .home__like {
      fill: brown;
      width: 1.5rem;
      height: 1.5rem;
      grid-column: 2 / 3;
      grid-row: 1 / 2;
      justify-self: end;
      z-index: 4; }
    .products .home__location, .products .home__rooms {
      margin-top: 2.5rem; }
    .products .home__location, .products .home__rooms, .products .home__area, .products .home__price {
      font-size: 1.5rem;
      font-family: cursive;
      display: flex;
      align-items: center;
      align-content: space-around; }
      .products .home__location svg, .products .home__rooms svg, .products .home__area svg, .products .home__price svg {
        fill: red;
        width: 2rem;
        height: 2rem;
        margin-left: 2rem; }
    .products .home__btn {
      grid-row: 5 / 6;
      grid-column: 1 / -1;
      background-color: aquamarine;
      color: blue;
      font-size: 2rem;
      padding: 1.5rem;
      font-weight: 200; }

.footer {
  background-color: black;
  padding: 20px; }
  .footer .foot__anchor {
    font-size: 1.5rem;
    color: white;
    font-family: fantasy;
    text-decoration: none; }
  .footer .foot__anchor:hover {
    text-decoration-color: aquamarine;
    text-decoration: underline; }
  .footer .foot .contacts {
    display: flex; }
    .footer .foot .contacts .foot-form-title {
      font-size: 2rem;
      font-family: cursive;
      color: antiquewhite; }
      .footer .foot .contacts .foot-form-title .foot-list-item {
        color: aliceblue; }

.photo {
  transform: translateY(-15rem);
  float: right; }

.foot-form-title {
  color: white;
  font-weight: 400;
  margin-bottom: 10px;
  padding-top: 0.5em;
  padding-right: 0px;
  padding-bottom: 0.5em;
  padding-left: 0px;
  top: 900px;
  font-size: 2em; }

.foot-form-desc {
  font-size: 0.8em;
  color: rgba(255, 255, 255, 0.55);
  line-height: 20px;
  text-align: right;
  margin-bottom: 15px; }

.error {
  background-color: #F0F3F4; }

.foot-list-item .fa-facebook:hover {
  color: #3b5998; }

.foot-list-item .fa-twitter:hover {
  color: #1da1f2; }

.foot-list-item .fa-linkedin:hover {
  color: #0077b5; }

.foot-list-item .fa-medium:hover {
  color: #00ab6c; }

.foot-list-item .fa-dribbble:hover {
  color: #444444; }

.gallery {
  background-color: #eee;
  display: grid;
  grid-template-columns: repeat(8, 1fr);
  grid-template-rows: repeat(7, 5vw);
  grid-gap: 1.5rem;
  padding: 1rem; }
  .gallery__item {
    outline-offset: 1.5rem;
    transition: all .2s; }
    .gallery__item--1 {
      grid-row: 1 / span 2;
      grid-column: 1 / span 2; }
    .gallery__item--2 {
      grid-row: 1/ span 3;
      grid-column: 3 / span 3; }
    .gallery__item--3 {
      grid-row: 1/ span 2;
      grid-column: 6 / span 1; }
    .gallery__item--4 {
      grid-row: 1/ span 2;
      grid-column: 7 / span 2; }
    .gallery__item--5 {
      grid-row: 3 / span 3;
      grid-column: 1 / span 2; }
    .gallery__item--6 {
      grid-row: 4 / span 2;
      grid-column: 3 / span 2; }
    .gallery__item--7 {
      grid-row: 4 / span 1;
      grid-column: 5 / span 1; }
    .gallery__item--8 {
      grid-row: 3 / span 2;
      grid-column: 6 / span 2; }
    .gallery__item--9 {
      grid-row: 3 / span 3;
      grid-column: 8 / span 1; }
    .gallery__item--10 {
      grid-row: 6 / span 2;
      grid-column: 1 / span 1; }
    .gallery__item--11 {
      grid-row: 6 / span 2;
      grid-column: 2 / span 2; }
    .gallery__item--12 {
      grid-row: 6 / span 2;
      grid-column: 4 / span 1; }
    .gallery__item--13 {
      grid-row: 5 / span 3;
      grid-column: 5 / span 3; }
    .gallery__item--14 {
      grid-row: 6 / span 2;
      grid-column: 8 / span 1; }
  .gallery__item:hover {
    outline: 10px solid blue;
    transform: scale(1.2) translateY(-0.5rem);
    box-shadow: 0 1.5rem 2rem rgba(0, 0, 0, 0.2); }
  .gallery__img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block; }

.team {
  display: flex;
  justify-content: space-between;
  color: azure; }
  @media only screen and (max-width: 600px) {
    .team {
      margin: 0 auto;
      display: flex;
      justify-content: space-between;
      flex-direction: column;
      align-items: center; } }
  .team .card {
    background-color: #eee;
    border: 1px solid blue;
    width: 40rem;
    height: 60rem;
    box-shadow: 0 1.5rem 2rem rgba(0, 0, 0, 0.2); }
    .team .card .pic {
      width: 100%;
      border-bottom: 2px solid blue; }
    .team .card .container .name {
      font-size: 4rem;
      font-family: fantasy;
      color: black; }
    .team .card .container .designation {
      font-size: 3rem;
      font-family: fantasy;
      color: black; }

*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: inherit; }

html {
  font-size: 62.5%; }
  @media only screen and (max-width: 75em) {
    html {
      font-size: 56.25%; } }
  @media only screen and (max-width: 56.25em) {
    html {
      font-size: 50%; } }
  @media only screen and (min-width: 112.5em) {
    html {
      font-size: 75%; } }

body {
  box-sizing: border-box;
  padding: 3rem; }
  @media only screen and (max-width: 56.25em) {
    body {
      padding: 0; } }

